[project]
name = "reward-hub"
version="1.0.0"
description="🚀 Reward Hub"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "asyncio==4.0.0",
    "click==8.3.3",
    "fake-useragent==2.2.0",
    "fastapi==0.136.1",
    "fastapi-crons==2.3.0",
    "fastapi-jwt-authlib==0.9.6",
    "langfuse==2.60.10",
    "litellm[caching]==1.80.11",
    "loguru==0.7.3",
    "pymysql==1.1.3",
    "python-multipart==0.0.28",
    "requests-cache==1.2.1",
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "uvicorn==0.47.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "black>=26.3.1",
    "pip>=26.1.1",
    "pyarmor==9.1.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
