[project]
name = "creator-hub"
version="1.0.0"
description=""
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "click==8.3.3",
    "fastapi==0.136.1",
    "fastapi-crons==2.3.0",
    "fastapi-jwt-authlib==0.9.6",
    "firebase-admin>=6.9.0",
    "pykitool==0.0.6",
    "pymysql==1.1.3",
    "uvicorn==0.47.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "black>=26.3.1",
    "pip>=26.1.1",
    "pyarmor==9.1.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


